--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -64,7 +64,7 @@
     \end{center}
 
 \section{Network Interfaces}
-    Use the \lstinline{ifconfig -a} command to display information about the network interfaces on the \textit{h0}.
+    Use the \lstbash{ifconfig -a} command to display information about the network interfaces on the \textit{h0}.
     Find the IP address and the net mask of your machine.
     
     \begin{report}
@@ -79,26 +79,26 @@
 
 
 \section{Local Host Dump}
-    While \lstinline[emph={lo}]{tcpdump -i lo}\footnote{In old linux use \lstinline[emph={your-host}]{tcpdump host your-host}} is running in one command window, run \lstinline{ping 127.0.0.1} from another command window.
+    While \lstbash[emph={lo}]{tcpdump -i lo}\footnote{In old linux use \lstbash[emph={your-host}]{tcpdump host your-host}} is running in one command window, run \lstbash{ping 127.0.0.1} from another command window.
 
     \begin{report}
-        \item From the \lstinline{ping} output, is the 127.0.0.1 interface on?
-            Can you see any ICMP message sent from your host in the \lstinline{tcpdump} output?
+        \item From the \lstbash{ping} output, is the 127.0.0.1 interface on?
+            Can you see any ICMP message sent from your host in the \lstbash{tcpdump} output?
             Why?
     \end{report}
 
 
 \section{Network Statistics}
-    By using \lstinline{netstat -ie}\footnote{You can use \lstinline{ifconfig} instead.} command, collect the statistics from all the hosts on the network.
-    Since we use the same login name and password, we can \lstinline{telnet} to other hosts and run \lstinline{netstat -ie} there.\footnote{%
-    After you are done with a remote host, you should exit the \lstinline{telnet} session before you \lstinline{telnet} to another remote host.
-    Recursive \lstinline{telnet} will generate unnecessary data in the \lstinline{tcpdump} output and cause confusion.
+    By using \lstbash{netstat -ie}\footnote{You can use \lstbash{ifconfig} instead.} command, collect the statistics from all the hosts on the network.
+    Since we use the same login name and password, we can \lstbash{telnet} to other hosts and run \lstbash{netstat -ie} there.\footnote{%
+    After you are done with a remote host, you should exit the \lstbash{telnet} session before you \lstbash{telnet} to another remote host.
+    Recursive \lstbash{telnet} will generate unnecessary data in the \lstbash{tcpdump} output and cause confusion.
     }
 
-    Save the \lstinline{netstat -ie} outputs.
+    Save the \lstbash{netstat -ie} outputs.
 
-    If you don’t see a significant amount of output packets in the \lstinline{netstat} output, the machine was probably restarted recently.
-    You may do this experiment later, or use the following \lstinline{socket} command to generate some network traffic:
+    If you don’t see a significant amount of output packets in the \lstbash{netstat} output, the machine was probably restarted recently.
+    You may do this experiment later, or use the following \lstbash{socket} command to generate some network traffic:
     \begin{lstlisting}[emph={remote-host},morekeywords={[3]echo}]
 # replace remote-host with ip address
 socket -u -i -n200 remote-host echo
@@ -114,34 +114,34 @@ socket -u -i -n200 remote-host echo
     You need these \textbf{MAC} addresses for the exercises and lab report (as table of host and \textbf{MAC}).
 
 \section{ARP Table}
-    Use \lstinline{arp -a} to see the entire ARP table on the \textit{h0}.
+    Use \lstbash{arp -a} to see the entire ARP table on the \textit{h0}.
     Observe that all the IP addresses displayed are on the same subnet.
 
     If you find that all the remote hosts are in the \textit{h0}’s ARP table, you need to delete a remote host from the table, using:
     \footnote{If you deleted \textit{h0}’s IP address from the ARP table by mistake, you must add the entry back in the table.
-    See the \lstinline{arp} manual page to add.
-    Note that, in order for the \textit{h0} to reply to the ARP requests, the ARP entry of \textit{h0} must have the \lstinline{P} flag in the ARP table.}
+    See the \lstbash{arp} manual page to add.
+    Note that, in order for the \textit{h0} to reply to the ARP requests, the ARP entry of \textit{h0} must have the \lstbash{P} flag in the ARP table.}
     \begin{lstlisting}[emph={remote-host}]
 arp -d remote-host
     \end{lstlisting}
 
     Save the ARP table for your lab report.
     
-    While \lstinline{tcpdump -en}\footnote{You can add \lstinline{-x} flag to see hex dump.} is running, \lstinline{ping} a remote host that has no entry in the \textit{h0} ARP table.
-    Then terminate the \lstinline{tcpdump} program.
+    While \lstbash{tcpdump -en}\footnote{You can add \lstbash{-x} flag to see hex dump.} is running, \lstbash{ping} a remote host that has no entry in the \textit{h0} ARP table.
+    Then terminate the \lstbash{tcpdump} program.
 
-    You can run \lstinline{wireshark} to capture network packet by \textbf{start capture} in GNS3 link menu.
+    You can run \lstbash{wireshark} to capture network packet by \textbf{start capture} in GNS3 link menu.
 
     Observe the first few lines of the packet trace to see how ARP is used to resolve an IP address.
 
-    Run \lstinline{arp -a} to see a new line added in the \textit{h0}’s ARP table.
+    Run \lstbash{arp -a} to see a new line added in the \textit{h0}’s ARP table.
     Save the new ARP table for your lab report.
 
-    Mark the ARP request packet and the ARP reply packet in the \lstinline{wireshark} window.
+    Mark the ARP request packet and the ARP reply packet in the \lstbash{wireshark} window.
     Then go to menu \textit{File/Print\ldots} to print the marked packets for your lab report (See Exercise~6 of Chapter~1 of reference book).
 
     \begin{report}
-        \item From the saved \lstinline{tcpdump} output, explain how ARP operates.
+        \item From the saved \lstbash{tcpdump} output, explain how ARP operates.
             Draw the format of a captured, ARP request and reply including each field and the value.
     \end{report}
 
@@ -154,15 +154,15 @@ arp -d remote-host
     \end{itemize}
 
 \section{ARP Timeout}
-    While \lstinline[emph={h0,netlab}]{tcpdump host h0.netlab} is running to capture traffic from the \textit{h0} machine, execute \lstinline{telnet 128.238.66.200}.
+    While \lstbash[emph={h0,netlab}]{tcpdump host h0.netlab} is running to capture traffic from the \textit{h0} machine, execute \lstbash{telnet 128.238.66.200}.
     Note there is no host with this IP address in the current configuration of the lab network.
 
-    Save the \lstinline{tcpdump} output of the first few packets for the lab report.
+    Save the \lstbash{tcpdump} output of the first few packets for the lab report.
 
-    After getting the necessary output, terminate the \lstinline{telnet} session.
+    After getting the necessary output, terminate the \lstbash{telnet} session.
 
     \begin{report}
-        \item From the saved \lstinline{tcpdump} output, describe how the ARP timeout and retransmission were performed.
+        \item From the saved \lstbash{tcpdump} output, describe how the ARP timeout and retransmission were performed.
             How many attemps were made to resolve a non-existing IP address?
     \end{report}
 
@@ -180,15 +180,15 @@ arp -d remote-host
 
     Set IP of each network by running the following command in the hosts:
     \begin{enumerate}
-        \item \lstinline[emph={x,eth0},morekeywords={[3]masks}]{ifconfig eth0 x.x.x.x/mask}
-        \item \lstinline[emph={y},morekeywords={[3]add,default,gw}]{route add default gw y.y.y.y}
+        \item \lstbash[emph={x,eth0},morekeywords={[3]masks}]{ifconfig eth0 x.x.x.x/mask}
+        \item \lstbash[emph={y},morekeywords={[3]add,default,gw}]{route add default gw y.y.y.y}
     \end{enumerate}
     Next we will enable the proxy ARP function on the ethernet1 interface of \textit{Router4}.
     \begin{enumerate}
-        \item \lstinline{telnet} to \textit{Router4}.
-                (Right click on the Router and open console on GNS3 or use \lstinline{telnet 128.238.64.4}.)
-        \item Log in to the router, type \lstinline[language={cisco}]{enable} to enter the \textit{Privileged EXEC} mode.\footnote{We will discuss bridge and router configuration in Chapter~3.}
-        \item Enter the \textit{Global Configuration} mode by typing \lstinline[language={cisco}]{config term}.
+        \item \lstbash{telnet} to \textit{Router4}.
+                (Right click on the Router and open console on GNS3 or use \lstbash{telnet 128.238.64.4}.)
+        \item Log in to the router, type \lstcisco{enable} to enter the \textit{Privileged EXEC} mode.\footnote{We will discuss bridge and router configuration in Chapter~3.}
+        \item Enter the \textit{Global Configuration} mode by typing \lstcisco{config term}.
         \item Then type the following lines for each interfaces:
         \begin{lstlisting}[language={cisco}, escapechar={@}, emph={x}]
 ! config term
@@ -204,7 +204,7 @@ wr
     
     Now \textit{Router4}’s \textit{ethernet1} interface can perform proxy ARP for the hosts in the 128.238.64.0 subnet.
 
-    Run \lstinline{tcpdump -enx} on the \textit{h1} and the \textit{h5}.
+    Run \lstbash{tcpdump -enx} on the \textit{h1} and the \textit{h5}.
 
     Then let the hosts in the 128.238.65.0 subnet send UDP datagrams to the hosts in the 128.238.64.0 subnet.
     For example, on the \textit{h4} type:
@@ -212,9 +212,9 @@ wr
 socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \end{lstlisting}
 
-    When you are done with all the hosts in the 128.238.64.0 subnet, save the \lstinline{tcpdump} output for the lab report.
+    When you are done with all the hosts in the 128.238.64.0 subnet, save the \lstbash{tcpdump} output for the lab report.
 
-    Run \lstinline{arp -a} to display the new ARP table in the \textit{h1}, \textit{h4} and the \textit{h5}.
+    Run \lstbash{arp -a} to display the new ARP table in the \textit{h1}, \textit{h4} and the \textit{h5}.
     Save the ARP table for your lab report.
 
     % After the lab instructor restores the network into a single subnet (see \hyperref[fig:1.3]{Figure~1.3}), change the IP address and network mask of your host’s interface back to their default values as in \hyperref[fig:1.3]{Figure~1.3}.
@@ -253,7 +253,7 @@ socket -i -u -n1 -w1000 host-in-64-0-subnet echo
     \end{report}
 
 \section{** Gratuitous (Unsolicited) ARP}
-    While \lstinline{tcpdump -ex} (or run \lstinline{wireshark}) is running on all the hosts, reboot host \textit{h7}.
+    While \lstbash{tcpdump -ex} (or run \lstbash{wireshark}) is running on all the hosts, reboot host \textit{h7}.
     You can send the gratuitous ARP manually by execute:
 
     \begin{lstlisting}[emph={eth0,h7-ip,h6-ip}]
@@ -261,7 +261,7 @@ arping -c 4 -A -I eth0 h6-ip
 arping -c 4 -U -I eth0 h7-ip
     \end{lstlisting}
 
-    After \textit{h7} is started, terminate \lstinline{tcpdump} and run \lstinline{wireshark -r exe7.out &} to load the \lstinline{tcpdump} trace.
+    After \textit{h7} is started, terminate \lstbash{tcpdump} and run \lstbash{wireshark -r exe7.out &} to load the \lstbash{tcpdump} trace.
     Print the gratuitous ARP request for your lab report.
     
     \begin{report}
@@ -277,22 +277,22 @@ arping -c 4 -U -I eth0 h7-ip
     The following exercises use the previous network topology shown in \hyperref[fig:2.9]{Figure~2.9}.
 
 \section{ping ICMP}
-    Use \lstinline[emph={h1,netlab}]{ping -sv h1.netlab} on the \textit{h0} to test whether the \textit{h1} host is reachable, while running:\\
-    \lstinline[emph={h0,h1,netlab},morekeywords={[3]host,and}]{tcpdump -enx host h0.netlab and h1.netlab}.
-    Save the \lstinline{tcpdump} and \lstinline{ping} output for the future study on \lstinline{ping}.
+    Use \lstbash[emph={h1,netlab}]{ping -sv h1.netlab} on the \textit{h0} to test whether the \textit{h1} host is reachable, while running:\\
+    \lstbash[emph={h0,h1,netlab},morekeywords={[3]host,and}]{tcpdump -enx host h0.netlab and h1.netlab}.
+    Save the \lstbash{tcpdump} and \lstbash{ping} output for the future study on \lstbash{ping}.
     
     \begin{report}
-        \item What ICMP messages are used by \lstinline{ping}?
+        \item What ICMP messages are used by \lstbash{ping}?
     \end{report}
 
 \section{ICMP Port Unreachable}
-    While running \lstinline[emph={h0,h1,netlab}]{tcpdump -x -s 70 host h0.netlab and h1.netlab}, execute the following \lstinline{socket} command to send a UDP datagram to the \textit{h1} host from the \textit{h0}:
+    While running \lstbash[emph={h0,h1,netlab}]{tcpdump -x -s 70 host h0.netlab and h1.netlab}, execute the following \lstbash{socket} command to send a UDP datagram to the \textit{h1} host from the \textit{h0}:
 
     \begin{lstlisting}[emph={h0,h1,netlab}]
 socket -i -u -n1 -w1000 h1.netlab 88888
     \end{lstlisting}
 
-    Save the \lstinline{tcpdump} output for the lab report.
+    Save the \lstbash{tcpdump} output for the lab report.
 
     \begin{report}
         \item Study the saved ICMP port unreachable error message (See \hyperref[fig:2.7]{Figure~2.7} of reference book.).
@@ -300,11 +300,11 @@ socket -i -u -n1 -w1000 h1.netlab 88888
     \end{report}
 
 \section{ICMP Host Unreachable}
-    While \lstinline{tcpdump} is running to capture the ICMP messages, \lstinline{ping} a host with IP address \textbf{128.238.60.100} on \text{h2}.
-    Save the \lstinline{ping} output.
+    While \lstbash{tcpdump} is running to capture the ICMP messages, \lstbash{ping} a host with IP address \textbf{128.238.60.100} on \text{h2}.
+    Save the \lstbash{ping} output.
     
     \begin{report}
-        \item Can you see any traffic sent on the network? Why? Explain what happened from the \lstinline{ping} output.
+        \item Can you see any traffic sent on the network? Why? Explain what happened from the \lstbash{ping} output.
 
         \item List the different ICMP messages you captured in \nameref{sec:icmp-ping}.
             Give the values of the type and code fields.
@@ -335,21 +335,21 @@ socket -i -u -n1 -w1000 h1.netlab 88888
 
     Delete the entries for all hosts other than your host from ARP table.
 
-    Run \lstinline{tcpdump -enx} on all the hosts.
+    Run \lstbash{tcpdump -enx} on all the hosts.
     Then, do the following three experiments:
 
     \begin{enumerate}
-        \item Execute \lstinline{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} $\rightarrow$ \textit{h2}).
+        \item Execute \lstbash{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} $\rightarrow$ \textit{h2}).
 
-        Now, from the other host with the duplicate IP address, execute \lstinline{telnet} command to the same host (\textit{h1} $\rightarrow$ \textit{h2}).
+        Now, from the other host with the duplicate IP address, execute \lstbash{telnet} command to the same host (\textit{h1} $\rightarrow$ \textit{h2}).
 
-        Observe what happens and save the \lstinline{tcpdump} output and the ARP tables in all the hosts in your group.
+        Observe what happens and save the \lstbash{tcpdump} output and the ARP tables in all the hosts in your group.
         
-        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from the \textit{h2}.
+        \item Execute \lstbash{telnet 128.238.66.100} (or \lstbash{telnet 128.238.66.104}) from the \textit{h2}.
         Which host provides the telnet connection?
         Why?
         
-        \item Execute \lstinline{telnet 128.238.66.100} (or \lstinline{telnet 128.238.66.104}) from the \textit{h3}.
+        \item Execute \lstbash{telnet 128.238.66.100} (or \lstbash{telnet 128.238.66.104}) from the \textit{h3}.
     Which host is connected to \textit{h3}? Why?
     \end{enumerate}
     
@@ -379,26 +379,26 @@ socket -i -u -n1 -w1000 h1.netlab 88888
             \end{tabular}
     \end{table}
 
-    Capture the packets with \lstinline{tcpdump -e} for the following cases.
+    Capture the packets with \lstbash{tcpdump -e} for the following cases.
 
     \begin{enumerate}
-        \item When \textit{h0} \lstinline{ping}s one of the hosts that have the correct subnet mask.
+        \item When \textit{h0} \lstbash{ping}s one of the hosts that have the correct subnet mask.
         
-        \item When \textit{h3} \lstinline{ping}s one of the hosts that have the correct subnet mask.
+        \item When \textit{h3} \lstbash{ping}s one of the hosts that have the correct subnet mask.
 
-        Now, copy the output displayed from the \lstinline{ping} window in the \textit{h3}.
+        Now, copy the output displayed from the \lstbash{ping} window in the \textit{h3}.
         Share the saved output message with other students.
         
-        \item When a host with the correct subnet mask \lstinline{ping}s \textit{h0}.
+        \item When a host with the correct subnet mask \lstbash{ping}s \textit{h0}.
         
-        \item When a host with the correct subnet mask \lstinline{ping}s \textit{h3}.
+        \item When a host with the correct subnet mask \lstbash{ping}s \textit{h3}.
     \end{enumerate}
     
     To avoid confusion, only one machine in each group should generate traffic in each case.
     Clearly, this exercise has to be performed as a team.
     
     \begin{report}
-        \item Explain what happened in each case according to the \lstinline{tcpdump} outputs saved.
+        \item Explain what happened in each case according to the \lstbash{tcpdump} outputs saved.
             Explain why \textit{h3} could not be reached from other hosts, whereas \textit{h0}), which has the same incorrect subnet mask, could communicate with the other hosts.
     \end{report}
 \end{document}
