--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -60,26 +60,26 @@ route add -net remote-subnet gw gateway-ip   # with default gateway
     \end{lstlisting}
     \begin{itemize}
         \item \textit{remote-subnet} is a subnet ip with mask number.
-                It must be like \lstinline{192.168.1.0/24}.
+                It must be like \lstbash{192.168.1.0/24}.
         \item \textit{gateway-ip} is a gateway ip in your network.
-                It must be like \lstinline{128.238.61.1}
+                It must be like \lstbash{128.238.61.1}
         \item \textit{eth0} is a physical interface name.
-                It is shown in \lstinline{ifconfig} or \lstinline{ip a} commands.
+                It is shown in \lstbash{ifconfig} or \lstbash{ip a} commands.
     \end{itemize}
     
 
-    Run \lstinline{tcpdump -en} on the \textit{h0}, and \lstinline{tcpdump -en} on the \textit{h1} in the other subnet simultaneously:
+    Run \lstbash{tcpdump -en} on the \textit{h0}, and \lstbash{tcpdump -en} on the \textit{h1} in the other subnet simultaneously:
     \begin{lstlisting}[emph={h0,h1,netlab},morekeywords={[3]host,and}]
 tcpdump -en host h1.netlab and h0.netlab
     \end{lstlisting}
-    Send \lstinline{ping} messages continuously from the \textit{h0} to \textit{h1}:
+    Send \lstbash{ping} messages continuously from the \textit{h0} to \textit{h1}:
     \begin{lstlisting}[emph={h1, netlab}]
 ping -sv h1.netlab
     \end{lstlisting}
-    After receiving the tenth echo reply, quit \lstinline{ping} and save the \lstinline{tcpdump} outputs from both machines.
-    Also, copy the \lstinline{ping} output.
+    After receiving the tenth echo reply, quit \lstbash{ping} and save the \lstbash{tcpdump} outputs from both machines.
+    Also, copy the \lstbash{ping} output.
 
-    During this exercise, don’t run the \lstinline{ping} program at the same time.
+    During this exercise, don’t run the \lstbash{ping} program at the same time.
     For clean results, do your experiments in turn.
     
     \begin{report}
@@ -91,9 +91,9 @@ ping -sv h1.netlab
         
         \item Answer the above two questions, but now for the echo reply that was returned from the \textit{h1} machine.
 
-        \item Use the \lstinline{tcpdump} outputs from both machines to calculate the average delay that a packet experienced in the router.
+        \item Use the \lstbash{tcpdump} outputs from both machines to calculate the average delay that a packet experienced in the router.
                 Note that the system times of the two machines might be different.
-                Show all the steps and submit the \lstinline{tcpdump} outputs with your report.
+                Show all the steps and submit the \lstbash{tcpdump} outputs with your report.
         
         \item Compare this value with the previous value in the case of the bridge.
                 Which, a router or a bridge, is faster? Why?
@@ -101,7 +101,7 @@ ping -sv h1.netlab
 
 \part{RIP Exercises}\label{sec:rip}
     In this section, we will examine the operation of RIP.
-    To enable the RIP routing process in a router, use the following commands in the \textit{Global Configuration} mode (use \lstinline[language={cisco}]{config term} command).
+    To enable the RIP routing process in a router, use the following commands in the \textit{Global Configuration} mode (use \lstcisco{config term} command).
     \begin{lstlisting}[language={cisco}, emph={network-number}]
 Router(config)# router rip
 Router(config-router)# network network-number
@@ -120,12 +120,12 @@ Router(config)# no router rip
 
     % You can see router RIP status and state by following command in router \textit{Privileged EXEC} mode.
     % \begin{itemize}
-    %     \item \lstinline[language={cisco}]{show ip rip [,route,interface,statistics]}
+    %     \item \lstcisco{show ip rip [,route,interface,statistics]}
     % \end{itemize}
     
-    % Since the IP address of \textit{ethernet1} in \textit{router4} is the only interface which is different from the initial configuration in Appendix~B of reference book, we will reboot all the four routers to restore their default configurations, and change the IP address on the \textit{ethernet1} in \textit{router4} only. Since our hosts started \lstinline{routed} at boot-up time, no further action is needed to run RIP on the hosts. \footnote{The lab instructor should make sure that the IP-Forwarding function is enabled in each host.}
+    % Since the IP address of \textit{ethernet1} in \textit{router4} is the only interface which is different from the initial configuration in Appendix~B of reference book, we will reboot all the four routers to restore their default configurations, and change the IP address on the \textit{ethernet1} in \textit{router4} only. Since our hosts started \lstbash{routed} at boot-up time, no further action is needed to run RIP on the hosts. \footnote{The lab instructor should make sure that the IP-Forwarding function is enabled in each host.}
     Configure network router and host’s as \hyperref[fig:4.11]{Figure~4.11}.
-    Since our host’s don’t have \lstinline{routed} package, you need to add route for subnet \textit{128.238.0.0/16} to each host.
+    Since our host’s don’t have \lstbash{routed} package, you need to add route for subnet \textit{128.238.0.0/16} to each host.
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}
@@ -201,12 +201,12 @@ Router(config)# no router rip
     To avoid confusion, each router should be configured by only one person.
 
     After starting RIP in all the routers, test connections to other hosts by pinging them.
-    Once you can successfully reach all the hosts, run the following command to capture the RIP messages sent on your subnet, or run \lstinline{wireshark} on link:
+    Once you can successfully reach all the hosts, run the following command to capture the RIP messages sent on your subnet, or run \lstbash{wireshark} on link:
     \begin{lstlisting}[morekeywords={[3]udp,port}]
 tcpdump -x -s 100 -c 4 udp port 520
     \end{lstlisting}
 
-    Save the routing table of router (\lstinline{sh ip route} in \textit{User EXEC} mode).
+    Save the routing table of router (\lstbash{sh ip route} in \textit{User EXEC} mode).
     Note the number of hops needed to reach destinations other than in your own subnet.
 
     Mark and print two different RIP messages captured in your subnet (see Exercise~6 of Chapter~1 of reference book).
@@ -232,13 +232,13 @@ tcpdump -x -s 100 -c 4 udp port 520
 
 \section{RIP recover on Link Failure}
     In this exercise we will examine how RIP responds to link failures.
-    Send \lstinline{ping} message continuously from the \textit{h3} to \textit{h4} and start \lstinline{tcpdump} on the \textit{h3}.
+    Send \lstbash{ping} message continuously from the \textit{h3} to \textit{h4} and start \lstbash{tcpdump} on the \textit{h3}.
     Let the two programs run during this exercise.
 
-    Disconnect the cable from the \textit{ethernet0} port of \textit{router2} from the hub in the 128.238.62.0 subnet (use \lstinline[language={cisco}]{Router(config-interface)# shut} for interface in \textbf{GNS3}), and type the \lstinline{date} command to get the current time.
+    Disconnect the cable from the \textit{ethernet0} port of \textit{router2} from the hub in the 128.238.62.0 subnet (use \lstcisco{Router(config-interface)# shut} for interface in \textbf{GNS3}), and type the \lstbash{date} command to get the current time.
 
-    Observe the \lstinline{ping} and \lstinline{tcpdump} windows.
-    When the connection is re-established, type the \lstinline{date} command again.
+    Observe the \lstbash{ping} and \lstbash{tcpdump} windows.
+    When the connection is re-established, type the \lstbash{date} command again.
     See how much time RIP takes to alter the routing table in your host to the new topology.
 
     Once you can successfully reach other hosts, connect the cable to the original position.
@@ -273,10 +273,10 @@ ip route add remote-subnet via gateway-ip    # with default gateway
 route add -net remote-subnet gw gateway-ip   # with default gateway
     \end{lstlisting}
 
-    While \lstinline[morekeywords={[3]ip,proto}]{tcpdump -enx -s 100 ip proto 1} is running, send \lstinline{ping} messages to a host that is three hops away through the default router.
+    While \lstbash[morekeywords={[3]ip,proto}]{tcpdump -enx -s 100 ip proto 1} is running, send \lstbash{ping} messages to a host that is three hops away through the default router.
 
-    After capturing an ICMP redirect message, save the \lstinline{tcpdump} output, the \lstinline{ping} output, and your host’s routing table.
-    You may need to \lstinline{ping} the same host several times in order to get your routing table updated.
+    After capturing an ICMP redirect message, save the \lstbash{tcpdump} output, the \lstbash{ping} output, and your host’s routing table.
+    You may need to \lstbash{ping} the same host several times in order to get your routing table updated.
     
     \begin{report}
         \item Submit what you saved in this exercise.
@@ -297,8 +297,8 @@ route add -net remote-subnet gw gateway-ip   # with default gateway
     \begin{lstlisting}[language={cisco}]
 Router(config-if)# ip irdp
     \end{lstlisting}
-    Run \lstinline{tcpdump -enx ip proto 1} on the \textit{h1}.
-    Now, run \lstinline{rdisc -s # solicitation mode} on the \textit{h0}.
+    Run \lstbash{tcpdump -enx ip proto 1} on the \textit{h1}.
+    Now, run \lstbash{rdisc -s # solicitation mode} on the \textit{h0}.
     Save the captured route discovery requests and replies for the lab report.
     Save \textit{h0} routing table for the lab report.
     
@@ -318,16 +318,16 @@ Router(config-router)# network address wildcard-mask area area-id
     \end{lstlisting}
     
     \begin{itemize}
-        \item \lstinline{process-id} is a numeric value local to the router.
-        It does not have to match \lstinline{process-id}s on other routers.
+        \item \lstbash{process-id} is a numeric value local to the router.
+        It does not have to match \lstbash{process-id}s on other routers.
         If you want to run multiple OSPF in a one router, you need assign different number for each case.
 
-        \item \lstinline{address} is the network address of the interface on which the OSPF process runs (128.238.0.0 in our case).
+        \item \lstbash{address} is the network address of the interface on which the OSPF process runs (128.238.0.0 in our case).
 
-        \item \lstinline{wildcard-mask} helps reduce the number of configuration commands.
+        \item \lstbash{wildcard-mask} helps reduce the number of configuration commands.
         0 is a match and 1 is a \textit{don’t care} bit (0.0.255.255 in our case).
         
-        \item \lstinline{area-id} is the number of the area that the interfaces belong to (see \hyperref[fig:4.7]{Figure~4.7}).
+        \item \lstbash{area-id} is the number of the area that the interfaces belong to (see \hyperref[fig:4.7]{Figure~4.7}).
         It can be any integer between 0 and $2^{32} - 1$ or can have an IP address form.
         Note that 0 is reserved for the backbone.
 \end{itemize}
@@ -416,15 +416,15 @@ tcpdump -x -s 120 ip proto 89
     Login to each router and start the OSPF process (configure OSPF process from \autoref{sec:ospf}).
     Set the argument \textit{area-id} to 1 for all the routers.
 
-    % The hosts in our lab run \lstinline{routed} (which uses RIP).
-    % The routing daemon supporting OSPF, \lstinline{gated}, is not installed.
+    % The hosts in our lab run \lstbash{routed} (which uses RIP).
+    % The routing daemon supporting OSPF, \lstbash{gated}, is not installed.
     In order to reach the routers and hosts in the other subnets, you need to add a default router in your host’s routing table.
 
-    Examine the routing table in each router (\lstinline[language={cisco}]{sh ip route})\footnote{see Section~4.3 of reference book.}.
-    When the routing table gets an entry for the network that is not directly connected, kill the \lstinline{tcpdump} process and save the \lstinline{tcpdump} output.
+    Examine the routing table in each router (\lstcisco{sh ip route})\footnote{see Section~4.3 of reference book.}.
+    When the routing table gets an entry for the network that is not directly connected, kill the \lstbash{tcpdump} process and save the \lstbash{tcpdump} output.
 
-    Collect the \lstinline{tcpdump} outputs from other subnets.
-    Study the various types of OSPF packets from the \lstinline{tcpdump} outputs.
+    Collect the \lstbash{tcpdump} outputs from other subnets.
+    Study the various types of OSPF packets from the \lstbash{tcpdump} outputs.
     
     \begin{report}
         \item Draw the common header of a saved OSPF message, giving the decimal values of the header fields (see \hyperref[fig:4.8]{Figure~4.8}).
@@ -442,7 +442,7 @@ tcpdump -x -s 120 ip proto 89
     Also, you can disable \textit{OSPF} process on the router.
 
     Remove all the routing entries other than your own subnet and the \textit{loopback} interface from your host routing table.
-    Save the output of \lstinline{netstat -rn} before building your host’s routing table.
+    Save the output of \lstbash{netstat -rn} before building your host’s routing table.
 
     Examine \hyperref[fig:4.13]{Figure~4.13} and build your host’s static routing table manually.
 
@@ -460,9 +460,9 @@ ip route destination-network destination-net-mask next-hup-ip
 ! ip route 128.238.63.0 255.255.255.0 128.238.64.3
     \end{lstlisting}
 
-    Use \lstinline{ping} to test the connections.
-    When you can reach all other subnets successfully,\footnote{Even when the routing table in your host and all the routers are configured perfectly, you may not be able to \lstinline{ping} a remote host, if the routing table in the remote host is incorrect.
-    When you can get \lstinline{ping} reply messages from all the interfaces of the routers successfully, your work is done for this exercise.} save the routing tables in your host and all the routers for the lab report.
+    Use \lstbash{ping} to test the connections.
+    When you can reach all other subnets successfully,\footnote{Even when the routing table in your host and all the routers are configured perfectly, you may not be able to \lstbash{ping} a remote host, if the routing table in the remote host is incorrect.
+    When you can get \lstbash{ping} reply messages from all the interfaces of the routers successfully, your work is done for this exercise.} save the routing tables in your host and all the routers for the lab report.
     
     \begin{report}
         \item Can you ping \textit{h1} from the \textit{h2}?
@@ -475,16 +475,16 @@ ip route destination-network destination-net-mask next-hup-ip
 In this experiment, we reuse the network as shown in Figure 4.13.
 
 \section{\texttt{traceroute} multi-hop path}\label{sec:traceroute}
-    Execute \lstinline[emph={h1,h2,netlab},morekeywords={[3]host,and}]{tcpdump -env host h1.netlab and h2.netlab} on the \textit{h1} host, where \textit{h2} is a host at least two hops away (for example \textit{h1} to \textit{h2} in \hyperref[fig:4.13]{Figure~4.13}).
+    Execute \lstbash[emph={h1,h2,netlab},morekeywords={[3]host,and}]{tcpdump -env host h1.netlab and h2.netlab} on the \textit{h1} host, where \textit{h2} is a host at least two hops away (for example \textit{h1} to \textit{h2} in \hyperref[fig:4.13]{Figure~4.13}).
 
-    Then, execute \lstinline[emph={h2,netlab}]{traceroute h2.netlab} to find the route from the \textit{h1} host to the \textit{h2} host.
+    Then, execute \lstbash[emph={h2,netlab}]{traceroute h2.netlab} to find the route from the \textit{h1} host to the \textit{h2} host.
 
-    Save the output of both \lstinline{traceroute} and \lstinline{tcpdump}.
+    Save the output of both \lstbash{traceroute} and \lstbash{tcpdump}.
 
     \begin{report}
-        \item Submit what you saved in this exercise (\lstinline{tcpdump} output).
+        \item Submit what you saved in this exercise (\lstbash{tcpdump} output).
 
-        \item From the \lstinline{tcpdump} output, explain how the multi-hop route was found.
+        \item From the \lstbash{tcpdump} output, explain how the multi-hop route was found.
     Explain the sequence of the ICMP messages used.
     \end{report}
 
