--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -66,10 +66,10 @@
 
 \section{Linux Multicast Routing Table}
 \label{sec:linux-multicast-routing}
-    Execute \lstinline{netstat -rn} to display the routing table of one host (for example \textit{h1}).
+    Execute \lstbash{netstat -rn} to display the routing table of one host (for example \textit{h1}).
     If there is no entry for the 224.0.0.0 subnet, you need to provide a default route for multicast traffic, by:
     \footnote{This command can be appended to the \path{/etc/rc.local} file, so that it will be executed automatically when the system bootstraps.
-    Each time when the network interface is brought down and up again by the \lstinline{ifconfig} command, you may need to run the \lstinline{route} command to re-insert the multicast routing entry.}
+    Each time when the network interface is brought down and up again by the \lstbash{ifconfig} command, you may need to run the \lstbash{route} command to re-insert the multicast routing entry.}
     \begin{lstlisting}[emph=eth0,morekeywords={[3]add,netmask,dev}]
 route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
     \end{lstlisting}
@@ -82,18 +82,18 @@ route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
     \end{report}
 
 \section{Multicast Membership}
-    Execute \lstinline{netstat -g} to show the multicast group memberships for all the interfaces in your host (for example \textit{h1}).
+    Execute \lstbash{netstat -g} to show the multicast group memberships for all the interfaces in your host (for example \textit{h1}).
     
     \begin{report}
         \item How many multicast groups did the interface belong to? What were the groups? Explain the meaning of the group IDs.
     \end{report}
 
 \section{Multicast \texttt{ping}}
-    Execute \lstinline{ping 224.0.0.1} on the \textit{h1}.
-    Examine the \lstinline{ping} output to see which hosts reply.
+    Execute \lstbash{ping 224.0.0.1} on the \textit{h1}.
+    Examine the \lstbash{ping} output to see which hosts reply.
 
-    Ping a broadcast address using \lstinline{ping -b 128.238.66.255}.
-    Examine the \lstinline{ping} output to see which hosts reply.
+    Ping a broadcast address using \lstbash{ping -b 128.238.66.255}.
+    Examine the \lstbash{ping} output to see which hosts reply.
 
     You can see and change broadcast ping replay state by:
     \begin{lstlisting}[emph=eth0]
@@ -113,15 +113,15 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
     \end{report}
 
 \section{Multicast vs Unicast}
-    on the \textit{h1} execute \lstinline{tcpdump -n -nn -e} and \lstinline[morekeywords={[3]ether,multicast}]{tcpdump ether multicast -n -nn -e} (or run \lstinline{wireshark}) to capture an Ethernet unicast frame, an Ethernet multicast frame, and an Ethernet broadcast frame.
+    on the \textit{h1} execute \lstbash{tcpdump -n -nn -e} and \lstbash[morekeywords={[3]ether,multicast}]{tcpdump ether multicast -n -nn -e} (or run \lstbash{wireshark}) to capture an Ethernet unicast frame, an Ethernet multicast frame, and an Ethernet broadcast frame.
 
-    To generate an Ethernet unicast frame, run \lstinline[emph={h1,netlab}]{socket -i -u -n1 h1.netlab echo} from the \textit{h0}.
+    To generate an Ethernet unicast frame, run \lstbash[emph={h1,netlab}]{socket -i -u -n1 h1.netlab echo} from the \textit{h0}.
 
-    Execute \lstinline{socket -i -u -n1 230.11.111.10 2000} to generate an Ethernet multicast frame.
+    Execute \lstbash{socket -i -u -n1 230.11.111.10 2000} to generate an Ethernet multicast frame.
 
     Generate another Ethernet multicast frame, but with a different group address of {232.139.111.10}.
 
-    To generate an Ethernet broadcast frame, you may \lstinline{ping} a remote host that has no entry in the ARP table of your host.
+    To generate an Ethernet broadcast frame, you may \lstbash{ping} a remote host that has no entry in the ARP table of your host.
     Recall that the ARP request is broadcast.
 
     Save the frames captured for the lab report.
@@ -135,41 +135,41 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
     \end{report}
 
 \section{Simple UDP Multicast Client and Server}
-    Go to \textit{code} directory for \textit{netlab} user at \path{/home/netlab/code} with \lstinline{cd} command.
-    You can compile source code with \lstinline[emph={$fileName, $outputName}]{gcc $fileName -o $outputName}.
+    Go to \textit{code} directory for \textit{netlab} user at \path{/home/netlab/code} with \lstbash{cd} command.
+    You can compile source code with \lstbash[emph={$fileName, $outputName}]{gcc $fileName -o $outputName}.
 
-    Start the multicast client \lstinline{netspy} on all the hosts, by executing:
+    Start the multicast client \lstbash{netspy} on all the hosts, by executing:
     \begin{lstlisting}
 ./netspy 224.111.111.111 1500
     \end{lstlisting}
-    Then, start the multicast sender \lstinline{netspyd} on the \textit{h0}, by executing:
+    Then, start the multicast sender \lstbash{netspyd} on the \textit{h0}, by executing:
     \begin{lstlisting}
 ./netspyd 224.111.111.111 1500 1
     \end{lstlisting}
-    Execute \lstinline{tcpdump ip multicast} or \lstinline{wireshark} on every subnet to capture multicast IP datagrams.
+    Execute \lstbash{tcpdump ip multicast} or \lstbash{wireshark} on every subnet to capture multicast IP datagrams.
 
-    Login to \textit{h0} from a remote machine, e.g.\ \textit{h6}, using \lstinline{telnet} or \lstinline{ssh} (need to start \textit{ssh} service with \lstinline{service ssh start}).
+    Login to \textit{h0} from a remote machine, e.g.\ \textit{h6}, using \lstbash{telnet} or \lstbash{ssh} (need to start \textit{ssh} service with \lstbash{service ssh start}).
 
-    Save the captured multicast datagram sent by \lstinline{netspyd} and exit the \lstinline{telnet} (or \lstinline{ssh}) session.
+    Save the captured multicast datagram sent by \lstbash{netspyd} and exit the \lstbash{telnet} (or \lstbash{ssh}) session.
 
     \begin{report}
-        \item From the \lstinline{tcpdump} output, how many messages are sent by \lstinline{netspyd} when a new user logged in to \textit{h0}?
-            From the \lstinline{netspy} outputs on all the hosts, how many copies of the message are received in total?
+        \item From the \lstbash{tcpdump} output, how many messages are sent by \lstbash{netspyd} when a new user logged in to \textit{h0}?
+            From the \lstbash{netspy} outputs on all the hosts, how many copies of the message are received in total?
 
-        \item Did \textit{h0}, where the multicast sender, \lstinline{netspyd}, was running, receive the multicast datagram?
+        \item Did \textit{h0}, where the multicast sender, \lstbash{netspyd}, was running, receive the multicast datagram?
             Why?
             If yes, through which interface did \textit{h0} receive this datagram?
     \end{report}
 
 \section{\texttt{ping} Replay}
-    % Enable broadcast ping replay by: \lstinline{echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts} on all hosts.
-    Keep the \lstinline{netspy} and the \lstinline{tcpdump} programs running.
-    Execute \lstinline{ping 224.111.111.111} from the \textit{h6}.
-    Examine the \lstinline{tcpdump} and \lstinline{ping} outputs to see which hosts replied.
+    % Enable broadcast ping replay by: \lstbash{echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_broadcasts} on all hosts.
+    Keep the \lstbash{netspy} and the \lstbash{tcpdump} programs running.
+    Execute \lstbash{ping 224.111.111.111} from the \textit{h6}.
+    Examine the \lstbash{tcpdump} and \lstbash{ping} outputs to see which hosts replied.
     To avoid confusion, students should do this exercise by turns.
-    Terminate the \lstinline{netspy} programs on several hosts, e.g.\ \textit{h0}, \textit{h1}, and the \textit{h5}.
-    Execute the \lstinline{ping} command again.
-    Also, examine the \lstinline{tcpdump} and the \lstinline{ping} outputs to see which hosts replied.
+    Terminate the \lstbash{netspy} programs on several hosts, e.g.\ \textit{h0}, \textit{h1}, and the \textit{h5}.
+    Execute the \lstbash{ping} command again.
+    Also, examine the \lstbash{tcpdump} and the \lstbash{ping} outputs to see which hosts replied.
 
 \part{IGMP Exercises}\label{sec:igmp}
     In the following exercises, use four hosts and one router.
@@ -231,32 +231,32 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
     Connect the hosts and the route in your group as shown in \hyperref[fig:7.13]{Figure~7.13}.
     Set the IP address of your host as given in \hyperref[tab:7.2]{Table~7.2}.
     Note that the IP addresses of the router interfaces are the same as their default IP addresses.
-    Login to the router and run \lstinline{ip multicast-routing} to enable multicast routing in the \textit{Global Configuration} mode.
-    Then, enable the PIM protocol on each interface, by running \lstinline{ip pim dense-mode} in the \textit{Interface Configuration} mode.
+    Login to the router and run \lstbash{ip multicast-routing} to enable multicast routing in the \textit{Global Configuration} mode.
+    Then, enable the PIM protocol on each interface, by running \lstbash{ip pim dense-mode} in the \textit{Interface Configuration} mode.
     Now the router is enabled to do multicast routing using PIM.
 
-    Login to the router, execute \lstinline{show ip igmp interface} and \lstinline{show ip igmp group} in the \textit{Privileged EXEC} mode.
+    Login to the router, execute \lstbash{show ip igmp interface} and \lstbash{show ip igmp group} in the \textit{Privileged EXEC} mode.
     Examine the multicast group memberships currently recorded in the router and the configurations of the router interfaces.
 
 \section{Multicast Message}
     Enable linux multicast routing in all the hosts (see \autoref{sec:linux-multicast-routing}).\\
-    Start \lstinline{netspy} on all the hosts, by using:
+    Start \lstbash{netspy} on all the hosts, by using:
     \begin{lstlisting}
 ./netspy 224.111.111.111 1500
     \end{lstlisting}
-    Start \lstinline{netspy} on the \textit{h1}, by using:
+    Start \lstbash{netspy} on the \textit{h1}, by using:
     \begin{lstlisting}
 ./netspyd 224.111.111.111 1500 16
     \end{lstlisting}
     
     Login to the router.
-    Run \lstinline[language={cisco}]{show ip igmp interface} and \lstinline[language={cisco}]{show ip igmp group} in the \textit{Privileged EXEC} mode again to examine the current membership records.
+    Run \lstcisco{show ip igmp interface} and \lstcisco{show ip igmp group} in the \textit{Privileged EXEC} mode again to examine the current membership records.
 
-    Try if you can \lstinline{ping} a host on the other side of the router.
+    Try if you can \lstbash{ping} a host on the other side of the router.
     Login to \textit{h1} from the \textit{h2} in your group, then logout.
-    See if the multicast messages sent by \lstinline{netspyd} reach the other side of the router.
+    See if the multicast messages sent by \lstbash{netspyd} reach the other side of the router.
 
-    Add \textit{route} for other subnet to your host and try \lstinline{ping} again.
+    Add \textit{route} for other subnet to your host and try \lstbash{ping} again.
     Now, login to \textit{h1} from the \textit{h2} in your group, then logout.
     
     \begin{report}
@@ -266,15 +266,15 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
     \end{report}
 
 \section{IGMP Types}
-    Execute \lstinline[morekeywords={[3]multicast}]{tcpdump ip multicast -v} or \lstinline{wireshark} in one console to capture IGMP messages.
-    When you see three or more IGMP queries in the second \lstinline{tcpdump} output, terminate both \lstinline{tcpdump} programs.
+    Execute \lstbash[morekeywords={[3]multicast}]{tcpdump ip multicast -v} or \lstbash{wireshark} in one console to capture IGMP messages.
+    When you see three or more IGMP queries in the second \lstbash{tcpdump} output, terminate both \lstbash{tcpdump} programs.
 % FIXME: check senario
     Analyze the IGMP messages you captured.
     Print and save two different IGMP messages.
 
     Repeat the above experiment.
-    Terminate \lstinline{netspy} on the \textit{h2} and the \textit{h4}.
-    Terminate the \lstinline{tcpdump} programs and analyze the IGMP leave message you captured.
+    Terminate \lstbash{netspy} on the \textit{h2} and the \textit{h4}.
+    Terminate the \lstbash{tcpdump} programs and analyze the IGMP leave message you captured.
     
     \begin{report}
         \item What is the value of the Time-to-Live (TTL) field for the IGMP messages?
@@ -376,27 +376,27 @@ Router(interface)# ip igmp join-group 224.0.0.2
     Enable PIM multicast routing in all the routers (see \autoref{sec:config-router}).
     All routers pre-configured in \textit{GN3} \hyperref[fig:7.14]{Figure~7.14}
 
-    Run \lstinline[morekeywords={[3]multicast}]{tcpdump ip multicast} or \lstinline{wireshark} on all subnet (at least one host).
+    Run \lstbash[morekeywords={[3]multicast}]{tcpdump ip multicast} or \lstbash{wireshark} on all subnet (at least one host).
     Maybe you need to restart (or reload) routers to capture all packet from start state.
 
-    Execute \lstinline{./netspy 224.111.111.111 1500} on the \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and the \textit{h6}.
+    Execute \lstbash{./netspy 224.111.111.111 1500} on the \textit{h0}, \textit{h2}, \textit{h3}, \textit{h5}, and the \textit{h6}.
 
-    Execute \lstinline{./netspyd 224.111.111.111 1500 16} on the \textit{h4}.
+    Execute \lstbash{./netspyd 224.111.111.111 1500 16} on the \textit{h4}.
     
-    To generate multicast traffic, you can login (by \lstinline{telnet} or \lstinline{ssh}\footnote{Need to \lstinline{service ssh start} on remote machine}) to or logout of \textit{h4}.
-    Each time when the login user set of \textit{h4} changes, \lstinline{netspyd} on the \textit{h4} will send a multicast datagram to group 224.111.111.111, to report the change in its login users.
+    To generate multicast traffic, you can login (by \lstbash{telnet} or \lstbash{ssh}\footnote{Need to \lstbash{service ssh start} on remote machine}) to or logout of \textit{h4}.
+    Each time when the login user set of \textit{h4} changes, \lstbash{netspyd} on the \textit{h4} will send a multicast datagram to group 224.111.111.111, to report the change in its login users.
 
-    Can you see the \lstinline{netspy} messages on the 128.238.65.0 subnet in the \lstinline{tcpdump} output? 
+    Can you see the \lstbash{netspy} messages on the 128.238.65.0 subnet in the \lstbash{tcpdump} output? 
 
-    Terminate the \lstinline{netspy} program on the \textit{h6}.
+    Terminate the \lstbash{netspy} program on the \textit{h6}.
 
-    Can you see the \lstinline{netspy} messages on the 128.238.65.0 subnet?
+    Can you see the \lstbash{netspy} messages on the 128.238.65.0 subnet?
     \footnote{If IGMPv1 is used, a participant does not send a leave message when it leaves the group.
     In this case, the membership record in the router expires in 120 seconds.
     During this interval, the router still forwards multicast datagram through the port.} 
 
     Save one of the PIM routing packets.
-    You may use \lstinline{tcpdump} output to analyze it.
+    You may use \lstbash{tcpdump} output to analyze it.
     What is the destination IP address used in this PIM routing packet?
     
     \begin{report}
@@ -404,18 +404,18 @@ Router(interface)# ip igmp join-group 224.0.0.2
     \end{report}
 
 \section{Multicast Tree}
-    In this exercise, try the \lstinline[language={cisco}]{mstat} Cisco~IOS command to find the multicast tree from a source.
-    The \lstinline[language={cisco}]{mstat} command is executable in the \textit{Privileged EXEC} mode.
-    You can always type \lstinline[language={cisco}]{?}\footnote{For example: \lstinline[language={cisco}]{mstat ?}} to get help on the syntax of the command.
+    In this exercise, try the \lstcisco{mstat} Cisco~IOS command to find the multicast tree from a source.
+    The \lstcisco{mstat} command is executable in the \textit{Privileged EXEC} mode.
+    You can always type \lstcisco{?}\footnote{For example: \lstcisco{mstat ?}} to get help on the syntax of the command.
 
     Generate multicast packet when execute command for the \textit{h4} (to see statistics change).
 
     \begin{report}
-        \item Report the \lstinline[language={cisco}]{mstat}\footnote{\lstinline[language={cisco},emph={x}]{mstat x.x.x.x}} output for the \textit{h4} on \textit{R1}.
+        \item Report the \lstcisco{mstat}\footnote{\lstcisco[emph={x}]{mstat x.x.x.x}} output for the \textit{h4} on \textit{R1}.
     \end{report}
 
 \section{Multicast TTL}
-    Keep \lstinline{netspy} running on all the hosts.
+    Keep \lstbash{netspy} running on all the hosts.
     Ping the multicast group address from the \textit{h4}, using: 
     \begin{lstlisting}[emph={n}]
 ping 224.111.111.111 -t n
@@ -427,12 +427,12 @@ ping 224.111.111.111 -t n
 
     Now, login to \textit{Router2}, in the \textit{Interface Configuration} mode, set the TTL threshold of the \textit{ethernet0} interface to 32, using: 
     \footnote{The syntax of this command may be different for different versions of Cisco~IOS.
-    You may use \lstinline[language={cisco}]{?} to get help.}
+    You may use \lstcisco{?} to get help.}
     \begin{lstlisting}[language={cisco}]    
 Router(interface)# ip multicast ttl-threshold 32
     \end{lstlisting}
 
-    Run the \lstinline{ping} command with $n = 16$ again.
+    Run the \lstbash{ping} command with $n = 16$ again.
     Can you see the multicast datagrams in the 128.238.61.0 and 128.238.62.0 subnet?
     Try $n = 33$.
     Answer the same question.
@@ -446,27 +446,27 @@ Router(interface)# ip multicast ttl-threshold 32
 \part{Multicast Video Streaming Exercise}
     This is an optional exercise on video streaming in multicast network.
     This exercise use many resource in GNS3 simulator.
-    In the following exercise, we use \lstinline{vlc} for video streaming.
+    In the following exercise, we use \lstbash{vlc} for video streaming.
     The routers and hosts have the same configurations as in \hyperref[fig:7.14]{Figure~7.14}.
 
 \section{**Multicast Real-Time Video}
-    Start \lstinline{vlc} on all the hosts, by using \lstinline{vlc &}.
+    Start \lstbash{vlc} on all the hosts, by using \lstbash{vlc &}.
 
-    on the \textit{h0}, go to the \lstinline{vlc} menu: \textit{Media/Stream\ldots }.
+    on the \textit{h0}, go to the \lstbash{vlc} menu: \textit{Media/Stream\ldots }.
     Chose video file \path{/home/netlab/group.mp4} and press \textit{stream} button.
     In \textit{Stream output} add \textit{RTP /MPEG Transport Stream} dialog.
     Then click the \textit{next} button.
     In the next window, specify the multicast group address to be {224.123.111.101}, with port number {22224} %and TTL 33.
     Then click the \textit{Finish} button.
-    Now the \lstinline{vlc} on the \textit{h0} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}.
+    Now the \lstbash{vlc} on the \textit{h0} is transmitting the video clip using \textit{RTP/RTSP/UDP/IP} to the multicast group {224.123.111.101} on port {22224}.
 
-    On all other hosts, go to the \lstinline{vlc} menu: \textit{Media/Open Network Stream\ldots}.
+    On all other hosts, go to the \lstbash{vlc} menu: \textit{Media/Open Network Stream\ldots}.
     In the following \textit{Open RTP Session} dialog, specify the same group address, port number as that used in the \textit{h0}.%and TTL
     Now you should see the received video is displayed on the screen.
 
-    Execute \lstinline[morekeywords={[3]multicast}]{tcpdump ip multicast} or \lstinline{wireshark} in one console to capture the multicast datagrams.
-    In another console, execute \lstinline[morekeywords={[3]multicast}]{tcpdump ip multicast} to monitor the capture process.
-    When you see some \texttt{RTCP} packets in the second \lstinline{tcpdump} output, terminate both \lstinline{tcpdump} programs.
+    Execute \lstbash[morekeywords={[3]multicast}]{tcpdump ip multicast} or \lstbash{wireshark} in one console to capture the multicast datagrams.
+    In another console, execute \lstbash[morekeywords={[3]multicast}]{tcpdump ip multicast} to monitor the capture process.
+    When you see some \texttt{RTCP} packets in the second \lstbash{tcpdump} output, terminate both \lstbash{tcpdump} programs.
 
     Analyze the header format of a \texttt{RTP} data packet and a \texttt{RTCP} Sender (or Receiver) Report packet.
 
@@ -474,7 +474,7 @@ Router(interface)# ip multicast ttl-threshold 32
 \begin{appendices}
 
 \section{Configuring a Multicast Router}
-    The \lstinline[language={cisco}]{no} form of this command cancels the group membership.
+    The \lstcisco{no} form of this command cancels the group membership.
     \begin{subappendices}
 \subsection{Configuring IGMP}
     \begin{lstlisting}[language={cisco}, emph={group-address, new-value-in-seconds}]
